// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-snooze-event Renders \`create-snooze-event\` with config data 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Snooze
      </span>
    </div>
    <div
      class="text"
    >
      <snooze-event-form-stub
        form="[object Object]"
        isnoterequired="true"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Save changes
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-snooze-event Renders \`create-snooze-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Snooze
      </span>
    </div>
    <div
      class="text"
    >
      <snooze-event-form-stub
        form="[object Object]"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Save changes
        </span>
      </button>
    </div>
  </div>
</form>
`;
